--- a/css/main.css
+++ b/css/main.css
@@ -574,7 +574,7 @@ main {
   text-align: center;
   padding: 1.5rem;
   color: #333;
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .footer-contenido p {
@@ -585,9 +585,9 @@ main {
 /* Chat flotante */
 .chat-flotante {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 100;
+  bottom: 10px;
+  right: 10px;
+  z-index: 10;
 }
 
 .chat-boton {
@@ -736,4 +736,10 @@ background-color: #fefefe;
   font-size: 1.1rem;
   margin-bottom: 1.5rem;
   color: #444;
+}
+#contador-visitas {
+  font-weight: bold;
+  color: #5b4a99;
+  font-size: 1.2rem;
+  transition: all 0.3s ease-in-out;
 }
