--- a/css/main.css
+++ b/css/main.css
@@ -737,9 +737,16 @@ background-color: #fefefe;
   margin-bottom: 1.5rem;
   color: #444;
 }
-#contador-visitas {
-  font-weight: bold;
-  color: #5b4a99;
-  font-size: 1.2rem;
-  transition: all 0.3s ease-in-out;
+.main-footer {
+  background-color: #d5c6ff;
+  text-align: center;
+  padding: 1.5rem;
+  color: #333;
+  margin-top: 1rem;
 }
+
+.footer-contenido p {
+  margin: 0.3rem 0;
+  font-weight: 500;
+}
+
